Increase z-index on fixed header
some elements could float above header before

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -106,6 +106,7 @@ header {
     position: fixed;
     height: $header-height;
     width: 100%;
+    z-index: 1;
 
     h1 {
         margin: 0;
